<resources>
    <string name="app_name">跑步钱进</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home_page"> 首页</string>
    <string name="friend_circle">圈子</string>
    <string name="try_ones">挑战</string>
    <string name="owner_center">我的</string>
    <string name="message_a">把本该给孩子和老人的赡养费充值到他们的账户里，</string>
    <string name="message_b">把本该给员工的福利充值到他们的账户里，把本该给子侄和亲朋好友的红包充值到账户里</string>
    <string name="message_c">没有额外多花一分钱，瓤大家动起来，多收益了一道世界上最好的运动</string>
    <string name="message_d">跑步钱进，为了孩子和老人，福泽惠及全人类</string>
    <string name="message_e">纯公益的事情，用微小的金钱游戏，没有人多花一分钱，每个人都得到了健康</string>
    <string name="message_f">跑步前进，您每天的运动伴侣，全球计步运动领导品牌</string>
    <string name="share_honor">分享</string>
    <string name="today_added_meoney">当天钱进</string>
    <string name="total_added_money">累计钱进</string>
    <string name="today_add_num">%$.3f元</string>
    <string name="total_add_num">%$.3f元</string>
    <string name="other_login_style">其他方式登录</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">电话</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_in_short">登入</string>
    <string name="action_sign_in_reg">注册</string>
    <string name="error_invalid_email">电话号码无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="desc_login">全球计步运动领导品牌</string>
    <string name="desc_sign">为了孩子和老人福泽及全人类</string>
    <string name="user_read">点击注册，即表示你已阅读并同意《跑步钱进服务协议》</string>
    <string name="mu_biao">目标</string>
    <string name="member_number">"成员%1d人"</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_uitets">UitetsActivity</string>
    <string name="action_settings">Settings</string>
</resources>
