<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacekgound_home_page"
    android:fitsSystemWindows="true">


    <FrameLayout
        android:layout_below="@+id/home_title"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp">

        <com.paobuqianjin.pbq.step.view.base.view.StepCircleView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/home_page_log" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/toay_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="3689"
                    android:textColor="@color/color_ffc14c"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/mu_biao_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toay_step"
                    android:layout_marginTop="0dp"
                    android:includeFontPadding="false"
                    android:text="@string/mu_biao"
                    android:textColor="@color/color_ffc14c"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/mu_biao_text"
                    android:layout_alignBottom="@+id/mu_biao_text"
                    android:layout_alignTop="@+id/mu_biao_text"
                    android:layout_toEndOf="@+id/mu_biao_text"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="10000步"
                    android:textColor="@color/color_ffc14c"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/toay_step"
                    android:layout_alignBottom="@+id/toay_step"
                    android:layout_alignTop="@+id/toay_step"
                    android:layout_toEndOf="@+id/toay_step"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="步"
                    android:textColor="@color/color_ffc14c"
                    android:textSize="20sp" />
            </RelativeLayout>
        </RelativeLayout>

    </FrameLayout>


    <Button
        android:id="@+id/bnt_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10pt"
        android:background="@drawable/shape"
        android:text="@string/share_honor" />

    <LinearLayout
        android:id="@+id/message_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/message_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_a"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/message_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_a"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_b"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/message_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_b"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_c"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/message_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_a"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/message_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_d"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_b"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/message_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_e"
                android:drawableLeft="@drawable/s_y_82x"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/message_c"
                android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="23sp"
        android:text="跑步钱进"
        android:textColor="@color/color_d6d6d6" />
</RelativeLayout>
