<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background_login_sign"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_login">

    <TextView
        android:id="@+id/text_tile_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/color_f8"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/reg_login_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_tile_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/desc_login"
        android:textColor="@color/color_ccfffffff"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/login_pan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_login_des"
        android:layout_marginTop="170dp"
        android:background="@drawable/bj_login"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="60dp"
            android:paddingStart="60dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sign_page_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:onClick="onTabLogSign"
                    android:paddingBottom="10dp"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/color_f8"
                    android:textSize="15sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/login_page_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:onClick="onTabLogSign"
                    android:paddingBottom="10dp"
                    android:text="@string/action_sign_in_reg"
                    android:textColor="@color/color_f8"
                    android:textSize="15sp" />
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/line_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/color_f8" />

            <ImageView
                android:id="@+id/blue_line_login"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_marginStart="45dp"
                android:background="@color/color_6c71c4" />

            <ImageView
                android:id="@+id/blue_line_sign"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="45dp"
                android:background="@color/color_6c71c4"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_sign_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line_white">

            <include
                android:id="@+id/sign_pan"
                layout="@layout/sign_edit_layout"
                android:visibility="gone"></include>

            <include
                android:id="@+id/log_pan"
                layout="@layout/log_edit_layout"></include>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/text_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/log_bottom"
        android:layout_marginTop="7dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@drawable/line_l" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="0dp"
            android:text="@string/other_login_style"
            android:textColor="@color/color_f8"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@drawable/line_r"
            android:contentDescription="TODO" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/log_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/wenxin"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_centerInParent="true"
                android:background="@drawable/weixin"
                android:onClick="onTabLogin" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/qq"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_centerInParent="true"
                android:background="@drawable/qq"
                android:onClick="onTabLogin" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/sina"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_centerInParent="true"
                android:background="@drawable/sina_log"
                android:onClick="onTabLogin" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>